<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShortMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">快搜一下短讯</string>
    <string name="search_local_hint">从已下载短讯中搜索</string>
    <string name="search_description">搜产品 搜地区 搜企业 任何关键词搜索试一试</string>
    <string name="company">中国塑模网</string>
    <string name="login">立即登录</string>
    <string name="login_client">登录客户端</string>
    <string name="login_boyi">登录博易短讯</string>
    <string name="register">注册</string>
    <string name="register_for_try">注册会员，试用</string>
    <string name="account_hint">11位手机号码</string>
    <string name="password_hint">6-32位密码</string>
    <string name="copy_right">Copyright © 2015 Bozes inc. All right reserved.</string>
    <string name="call_to_register">或致电开通：</string>
    <string name="customer_service_number">010-84827390</string>
    <string name="password_warning">请输入密码</string>
    <string name="account_warning">请输入正确的手机号</string>
    <string name="password_confirm_warning">请输入确认密码</string>
    <string name="password_confirm_wrong_warning">两次密码输入不一致</string>
    <string name="policy_warning">两次密码输入不一致</string>
    <string name="verification_warning">请输入验证码</string>
    <string name="phone_number_erae_hint">仅限中国大陆手机用户的号码注册</string>
    <string name="get_verification">获取验证码</string>
    <string name="phone_number_hint">输入您的手机号码</string>
    <string name="verification_hint">输入您的验证码</string>
    <string name="password_set_hint">设置您的密码</string>
    <string name="password_confirm_hint">确认您的密码</string>
    <string name="policy_aggreed">我已阅读并同意</string>
    <string name="policy_link">塑模网用户协议</string>
    <string name="submit">提交</string>
    <string name="app_settings">应用设置</string>
    <string name="logoff">注销（解绑）</string>
    <string name="account">账号：</string>
    <string name="text_size">字体大小</string>
    <string name="clear_cache">缓存清理</string>
    <string name="display_day">展示天数</string>
    <string name="display_day_settings">展示天数设置</string>
    <string name="one_week">一周</string>
    <string name="two_weeks">二周</string>
    <string name="about_us">关于我们</string>
    <string name="about_boyi">关于博易资讯</string>
    <string name="announcement_hint">博易资讯声明</string>
    <string name="announcement_content">博易资讯以严谨的态度为您提供“包装材料”资讯服务。保证客户权益是我们的责任\n您注册账号时填写的任何信息，只作为博易资讯与您沟通交流使用，我们不会向第三方泄露您的任何个人资料。</string>
    <string name="feedback">意见&#38;投诉</string>
    <string name="check_update">检查版本更新</string>
    <string name="call_hint">打个电话给您的客服为您提供更多帮助</string>
    <string name="classify_title">短讯分类</string>
    <string name="search_title">短讯搜索</string>
    <string name="boyi_shortmessage">博易短讯</string>
    <string name="column_title">短讯栏目</string>
    <string name="column_confirm">确认栏目</string>
    <string name="reset_password">设置新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="loaded">已加载</string>
    <string name="xlistview_header_hint_normal">拉动以刷新</string>
    <string name="xlistview_header_hint_ready">松开以刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新时间：</string>
    <string name="b_text">B</string>
    <string name="k_text">K</string>
    <string name="m_text">M</string>
    <string name="g_text">G</string>

</resources>
