<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_quick_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boyi.shortmessage.MainActivity" >

    <EditText
        android:id="@+id/edit_text_search"
        android:background="@drawable/background_search_edit_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:paddingLeft="40dip"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:hint="@string/search_hint"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="40dip" />
    <ImageView
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignLeft="@id/edit_text_search"
        android:layout_alignTop="@id/edit_text_search"
        android:layout_alignBottom="@id/edit_text_search"
        android:padding="10dip"
        android:scaleType="fitXY"
        android:src="@drawable/icon_search" />

    <TextView
        android:id="@+id/search_description"
        android:layout_below="@id/edit_text_search"
        android:padding="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/search_description" />

    <RelativeLayout
        android:id="@+id/bottom_line"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="50dip" >
        <TextView
            android:id="@+id/copy_right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/copy_right" />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_dev"
        android:layout_above="@id/bottom_line"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dip" >
        <Button
            android:id="@+id/login"
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_margin="5dip"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/login"
            android:background="@drawable/btn_red_bg"
            android:gravity="center" />
        <Button
            android:id="@+id/register"
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_margin="5dip"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/register"
            android:background="@drawable/btn_orange_bg"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>
