<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boyi.shortmessage.MainActivity" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <TextView
        android:background="@drawable/register_hint_tap"
        android:id="@+id/phone_nunber_hint"
        android:layout_below="@id/titlebar"
        android:text="@string/phone_number_erae_hint"
        android:textColor="@color/gray_text"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginBottom="5dip"
        android:gravity="left" />

    <RelativeLayout
        android:id="@+id/phone_number_dev"
        android:layout_below="@id/phone_nunber_hint"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dip" >
        <Button
            android:id="@+id/get_verification"
            android:layout_alignParentRight="true"
            android:layout_height="45dip"
            android:layout_margin="5dip"
            android:layout_width="120dip"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/get_verification"
            android:background="@drawable/btn_blue_bg"
            android:gravity="center" />
        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@id/get_verification"
            android:background="@android:color/transparent"
            android:paddingLeft="50dip"
            android:layout_marginRight="130dip"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:inputType="phone"
            android:hint="@string/phone_number_hint"
            android:layout_width="fill_parent"
            android:gravity="center_vertical|left"
            android:layout_height="50dip" />
        <ImageView
            android:id="@+id/account_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignBottom="@id/edit_text_phone_number"
            android:layout_alignLeft="@id/edit_text_phone_number"
            android:layout_alignTop="@id/edit_text_phone_number"
            android:padding="10dip"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_account_empty" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text_verification"
        android:layout_below="@id/phone_number_dev"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/background_input"
        android:paddingLeft="50dip"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="numberPassword"
        android:hint="@string/verification_hint"
        android:layout_width="fill_parent"
        android:gravity="center_vertical|left"
        android:layout_height="50dip" />
    <ImageView
        android:id="@+id/verification_icon"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignBottom="@id/edit_text_verification"
        android:layout_alignLeft="@id/edit_text_verification"
        android:layout_alignTop="@id/edit_text_verification"
        android:padding="10dip"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_verification_empty" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_below="@id/edit_text_verification"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/background_input"
        android:paddingLeft="50dip"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="numberPassword"
        android:hint="@string/password_set_hint"
        android:layout_width="fill_parent"
        android:gravity="center_vertical|left"
        android:layout_height="50dip" />
    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignBottom="@id/edit_text_password"
        android:layout_alignLeft="@id/edit_text_password"
        android:layout_alignTop="@id/edit_text_password"
        android:padding="10dip"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_password_empty" />

    <Button
        android:id="@+id/register"
        android:layout_below="@id/edit_text_password"
        android:layout_height="50dip"
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/register"
        android:background="@drawable/btn_blue_bg"
        android:gravity="center" />

    <TextView
        android:id="@+id/announcement"
        android:layout_below="@id/register"
        android:background="@null"
        android:text="@string/announcement_hint"
        android:padding="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="15dip"
        android:gravity="left" />

    <TextView
        android:id="@+id/divider"
        android:layout_below="@id/announcement"
        android:background="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="1dip" />

    <TextView
        android:id="@+id/announcement_content"
        android:layout_below="@id/divider"
        android:background="@null"
        android:text="@string/announcement_content"
        android:padding="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:gravity="left" />

</RelativeLayout>
