<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boyi.shortmessage.MainActivity" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <RelativeLayout
        android:id="@+id/phone_number_dev"
        android:layout_below="@id/titlebar"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="5dip"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/get_verification"
            android:layout_alignParentRight="true"
            android:layout_height="45dip"
            android:layout_margin="5dip"
            android:layout_width="100dip"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/get_verification"
            android:background="@drawable/blue_btn_bg"
            android:gravity="center" />
        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/get_verification"
            android:drawableLeft="@drawable/edit_text_icon"
            android:drawablePadding="5dip"
            android:background="@color/white"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:inputType="phone"
            android:hint="@string/phone_number_hint"
            android:layout_width="fill_parent"
            android:gravity="center_vertical|left"
            android:layout_height="50dip" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text_verification"
        android:layout_below="@id/phone_number_dev"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/edit_text_icon"
        android:drawablePadding="5dip"
        android:padding="5dip"
        android:background="@color/white"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="numberPassword"
        android:hint="@string/verification_hint"
        android:layout_width="fill_parent"
        android:gravity="center_vertical|left"
        android:layout_height="50dip" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_below="@id/edit_text_verification"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/edit_text_icon"
        android:drawablePadding="5dip"
        android:padding="5dip"
        android:background="@color/white"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="numberPassword"
        android:hint="@string/password_set_hint"
        android:layout_width="fill_parent"
        android:gravity="center_vertical|left"
        android:layout_height="50dip" />

    <Button
        android:id="@+id/register"
        android:layout_below="@id/edit_text_password"
        android:layout_height="50dip"
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/reset_password"
        android:background="@drawable/blue_btn_bg"
        android:gravity="center" />

</RelativeLayout>
