<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boyi.shortmessage.MainActivity" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:id="@+id/bottom_dev"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/bottom_img"
            android:padding="5dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_phone" />
        <LinearLayout
            android:id="@+id/bottom_text_dev"
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical|left"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/call_hint"
                android:gravity="center_vertical|left"
                android:text="@string/call_hint"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/call_number"
                android:text="@string/customer_service_number"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/dialog_red"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_above="@id/bottom_dev"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray" />

    <Button
        android:id="@+id/column_confirm"
        android:layout_above="@id/divider"
        android:layout_height="50dip"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/column_confirm"
        android:background="@drawable/btn_blue_bg"
        android:gravity="center" />

    <ListView
        android:id="@+id/list_view"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dip"
        android:layout_below="@id/titlebar"
        android:layout_above="@id/column_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
